Fix javadoc maven plugin config and enable lint